@@ -66,7 +66,6 @@ sr.cutfile: %{Global.cutfile}
 sr.IsSignal: %{Global.IsSignal}
 sr.Period: %{Global.Period}
 sr.DerivationTag: %{Global.DerivationTag}
-sr.METContainerKey: %{Global.METContainerKey}
 
 # ---------------------------  CRWT Region -----------------
 crwt.IsData: %{Global.IsData}
@@ -74,7 +73,6 @@ crwt.cutfile: %{Global.cutfile}
 crwt.IsSignal: %{Global.IsSignal}
 crwt.Period: %{Global.Period}
 crwt.DerivationTag: %{Global.DerivationTag}
-crwt.METContainerKey: %{Global.METContainerKey}
 
 # ---------------------------  VRWT Region -----------------
 vrwt.IsData: %{Global.IsData}
@@ -83,7 +81,6 @@ vrwt.IsVR: TRUE
 vrwt.IsSignal: %{Global.IsSignal}
 vrwt.Period: %{Global.Period}
 vrwt.DerivationTag: %{Global.DerivationTag}
-vrwt.METContainerKey: %{Global.METContainerKey}
 
 # ---------------------------  CRZ Region -----------------
 crz.IsData: %{Global.IsData}
@@ -91,7 +88,6 @@ crz.cutfile: %{Global.cutfile}
 crz.IsSignal: %{Global.IsSignal}
 crz.Period: %{Global.Period}
 crz.DerivationTag: %{Global.DerivationTag}
-crz.METContainerKey: %{Global.METContainerKey}
 
 
 
@@ -113,5 +109,4 @@ cry.IsSignal: %{Global.IsSignal}
 cry.Period: %{Global.Period}
 cry.DerivationTag: %{Global.DerivationTag}
 cry.suffix: cry
-cry.METContainerKey: %{Global.METContainerKey}
 
