@@ -70,7 +70,6 @@ sr.IsSignal: %{Global.IsSignal}
 sr.UseSystematics: TRUE
 sr.Period: %{Global.Period}
 sr.DerivationTag: %{Global.DerivationTag}
-sr.METContainerKey: %{Global.METContainerKey}
 
 
 # ---------------------------  CRWT Region -----------------
@@ -80,7 +79,6 @@ crwt.IsSignal: %{Global.IsSignal}
 crwt.UseSystematics: TRUE
 crwt.Period: %{Global.Period}
 crwt.DerivationTag: %{Global.DerivationTag}
-crwt.METContainerKey: %{Global.METContainerKey}
 
 # ---------------------------  VRWT Region -----------------
 vrwt.IsData: %{Global.IsData}
@@ -90,7 +88,6 @@ vrwt.IsSignal: %{Global.IsSignal}
 vrwt.UseSystematics: TRUE
 vrwt.Period: %{Global.Period}
 vrwt.DerivationTag: %{Global.DerivationTag}
-vrwt.METContainerKey: %{Global.METContainerKey}
 
 # ---------------------------  CRZ Region -----------------
 crz.IsData: %{Global.IsData}
@@ -99,7 +96,6 @@ crz.IsSignal: %{Global.IsSignal}
 crz.UseSystematics: TRUE
 crz.Period: %{Global.Period}
 crz.DerivationTag: %{Global.DerivationTag}
-crz.METContainerKey: %{Global.METContainerKey}
 
 # ---------------------------  Build physics objects -----------------
 susyobjsy.IsData: %{Global.IsData}
@@ -121,6 +117,5 @@ cry.Period: %{Global.Period}
 cry.DerivationTag: %{Global.DerivationTag}
 cry.suffix: cry
 cry.UseSystematics: TRUE
-cry.METContainerKey: %{Global.METContainerKey}
 
 
